# bevy-pong

./: .gitignore  Cargo.toml  README.md  index.html  rustfmt.toml
assets/sounds/: goal.json  ping.json  pong.json
credits/: CREDITS.md
src/: ai_paddle.rs  ball.rs  centre_line.rs  collider.rs  lib.rs  main.rs  paddle.rs  pause.rs  player.rs  reset.rs  score.rs  splash_screen.rs  wall.rs
src/game_menu/: game.rs  menu.rs  mod.rs  splash.rs
src/sfxr_audio/: mod.rs  serde.rs  sfxr_audio_asset_loader.rs  sfxr_decoder.rs
