[package]
name = "bevy_pong"
version = "0.1.0"
authors = ["Sebastian Clausen <github@sebastian-clausen.de>"]
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
panic = "abort"

[features]
dev = ["bevy/dynamic_linking"]
debug = []

[dependencies]
bevy = "0.10.1"
bevy_turborand = "0.5"
bevy-inspector-egui = "0.18.3"
sfxr = { git = "https://github.com/sclausen/sfxr-rs" }
rodio = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
serde_with = "3.0"
